@startuml
title "Diagramme conceptuel - Bibliothèque Numérique"

enum StatutEmprunt {
  EN_COURS
  RENDU
  EN_RETARD
}

enum StatutExemplaire {
  DISPONIBLE
  EMPRUNTE
  PERDU
}

class Livre {
  + idLivre : Identifiant
  + titre : Texte
  + auteur : Texte
  + isbn : Texte
  + datePublication : Date
}

class Exemplaire {
  + idExemplaire : Identifiant
  + codeBarre : Texte
  + statut : StatutExemplaire
}

class Emprunt {
  + idEmprunt : Identifiant
  + dateEmprunt : Date
  + dateRetourPrevue : Date
  + dateRetourEffective : Date
  + statut : StatutEmprunt
}

class Lecteur {
  + idLecteur : Identifiant
  + nom : Texte
  + prenom : Texte
  + email : Texte
  + dateAdhesion : Date
}

class Bibliothecaire {
  + idBibliothecaire : Identifiant
  + nom : Texte
  + prenom : Texte
  + email : Texte
}

Livre "1" -- "0..*" Exemplaire : possède
Exemplaire "1" -- "0..*" Emprunt : concerne
Lecteur "1" -- "0..*" Emprunt : effectue
Bibliothecaire "1" -- "0..*" Livre : gère

note bottom of Exemplaire
  Un livre peut avoir plusieurs exemplaires.
  Le statut conditionne la disponibilité.
end note

note bottom of Emprunt
  Un emprunt relie un lecteur à un exemplaire.
  dateRetourEffective est null si emprunt en cours.
end note
@enduml